<resources>
    <string name="app_name">CopoDagua</string>
    <string name="tips">Toque no botão abaixo de acordo com a quantidade de ML consumida.</string>
    <string name="small">200ml</string>
    <string name="medium">350ml</string>
    <string name="large">500ml</string>
    <string name="today">Hoje</string>
    <string name="undo">Desfazer</string>
    <string name="result">%1$d ml</string>
</resources>